--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,8 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.salesforce.crud.Validating_Crud.validatelogin</td></tr>
+<tr><td>com.salesforce.crud.Validating_Crud.validatePatchedData</td></tr>
+<tr><td>com.salesforce.crud.Validating_Crud.invalidGetAccountAPI</td></tr>
+<tr><td>com.salesforce.crud.Validating_Crud.validatePatchedStatus</td></tr>
+<tr><td>com.salesforce.crud.Validating_Crud.validateDeletedNonExistAccount</td></tr>
+<tr><td>com.salesforce.crud.Validating_Crud.GetAllRecentAccounts</td></tr>
 </table>
