--- a/test-output/old/Regression Suite/methods-alphabetical.html
+++ b/test-output/old/Regression Suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d73fa">  <td>24/05/13 18:18:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.GetAllRecentAccounts()[pri:2, instance:com.salesforce.crud.Validating_Crud@6b7906b3]">GetAllRecentAccounts</td> 
-  <td>main@2001115307</td>   <td></td> </tr>
-<tr bgcolor="9d73fa">  <td>24/05/13 18:18:30</td>   <td>-1005</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validating_Crud.beforeClass()[pri:0, instance:com.salesforce.crud.Validating_Crud@6b7906b3]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2001115307</td>   <td></td> </tr>
-<tr bgcolor="cd80a3">  <td>24/05/13 18:18:27</td>   <td>-3873</td> <td title="&gt;&gt;BaseTest.beforeSuite()[pri:0, instance:com.salesforce.crud.Validating_Crud@6b7906b3]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2001115307</td>   <td></td> </tr>
-<tr bgcolor="92986d">  <td>24/05/13 18:18:28</td>   <td>-3662</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionality.beforeclass()[pri:0, instance:com.salesforce.loginTest.LoginFunctionality@58fb7731]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2001115307</td>   <td></td> </tr>
-<tr bgcolor="9d73fa">  <td>24/05/13 18:18:31</td>   <td>-227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.invalidGetAccountAPI()[pri:1, instance:com.salesforce.crud.Validating_Crud@6b7906b3]">invalidGetAccountAPI</td> 
-  <td>main@2001115307</td>   <td></td> </tr>
-<tr bgcolor="9d73fa">  <td>24/05/13 18:18:32</td>   <td>1047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validateDeletedNonExistAccount()[pri:5, instance:com.salesforce.crud.Validating_Crud@6b7906b3]">validateDeletedNonExistAccount</td> 
-  <td>main@2001115307</td>   <td></td> </tr>
-<tr bgcolor="9d73fa">  <td>24/05/13 18:18:31</td>   <td>-535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validateGetAccountAPI()[pri:0, instance:com.salesforce.crud.Validating_Crud@6b7906b3]">validateGetAccountAPI</td> 
-  <td>main@2001115307</td>   <td></td> </tr>
-<tr bgcolor="9d73fa">  <td>24/05/13 18:18:32</td>   <td>846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validatePatchedData()[pri:4, instance:com.salesforce.crud.Validating_Crud@6b7906b3]">validatePatchedData</td> 
-  <td>main@2001115307</td>   <td></td> </tr>
-<tr bgcolor="9d73fa">  <td>24/05/13 18:18:32</td>   <td>397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validatePatchedStatus()[pri:3, instance:com.salesforce.crud.Validating_Crud@6b7906b3]">validatePatchedStatus</td> 
-  <td>main@2001115307</td>   <td></td> </tr>
-<tr bgcolor="92986d">  <td>24/05/13 18:18:28</td>   <td>-3240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionality.validatelogin()[pri:0, instance:com.salesforce.loginTest.LoginFunctionality@58fb7731]">validatelogin</td> 
-  <td>main@2001115307</td>   <td></td> </tr>
+<tr bgcolor="9d73fa">  <td>24/05/15 15:19:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.GetAllRecentAccounts()[pri:2, instance:com.salesforce.crudTest.Validating_Crud@395b56bb]">GetAllRecentAccounts</td> 
+  <td>main@1799635803</td>   <td></td> </tr>
+<tr bgcolor="9d73fa">  <td>24/05/15 15:19:12</td>   <td>-1806</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validating_Crud.beforeClass()[pri:0, instance:com.salesforce.crudTest.Validating_Crud@395b56bb]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799635803</td>   <td></td> </tr>
+<tr bgcolor="d1d761">  <td>24/05/15 15:19:09</td>   <td>-5188</td> <td title="&gt;&gt;BaseTest.beforeSuite()[pri:0, instance:com.salesforce.loginTest.LoginFunctionality@dfddc9a]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799635803</td>   <td></td> </tr>
+<tr bgcolor="92986d">  <td>24/05/15 15:19:09</td>   <td>-4997</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionality.beforeclass()[pri:0, instance:com.salesforce.loginTest.LoginFunctionality@dfddc9a]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799635803</td>   <td></td> </tr>
+<tr bgcolor="9d73fa">  <td>24/05/15 15:19:14</td>   <td>352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.invalidGetAccountAPI()[pri:2, instance:com.salesforce.crudTest.Validating_Crud@395b56bb]">invalidGetAccountAPI</td> 
+  <td>main@1799635803</td>   <td></td> </tr>
+<tr bgcolor="9d73fa">  <td>24/05/15 15:19:16</td>   <td>1641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validateDeletedNonExistAccount()[pri:5, instance:com.salesforce.crudTest.Validating_Crud@395b56bb]">validateDeletedNonExistAccount</td> 
+  <td>main@1799635803</td>   <td></td> </tr>
+<tr bgcolor="9d73fa">  <td>24/05/15 15:19:13</td>   <td>-413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validateGetAccountAPI()[pri:1, instance:com.salesforce.crudTest.Validating_Crud@395b56bb]">validateGetAccountAPI</td> 
+  <td>main@1799635803</td>   <td></td> </tr>
+<tr bgcolor="9d73fa">  <td>24/05/15 15:19:15</td>   <td>1299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validatePatchedData()[pri:0, instance:com.salesforce.crudTest.Validating_Crud@395b56bb]">validatePatchedData</td> 
+  <td>main@1799635803</td>   <td></td> </tr>
+<tr bgcolor="9d73fa">  <td>24/05/15 15:19:15</td>   <td>727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validatePatchedStatus()[pri:3, instance:com.salesforce.crudTest.Validating_Crud@395b56bb]">validatePatchedStatus</td> 
+  <td>main@1799635803</td>   <td></td> </tr>
+<tr bgcolor="92986d">  <td>24/05/15 15:19:09</td>   <td>-4518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionality.validatelogin()[pri:0, instance:com.salesforce.loginTest.LoginFunctionality@dfddc9a]">validatelogin</td> 
+  <td>main@1799635803</td>   <td></td> </tr>
 </table>
