--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a2befb">  <td>24/05/13 22:07:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.GetAllRecentAccounts()[pri:2, instance:com.salesforce.crud.Validating_Crud@505fc5a4]">GetAllRecentAccounts</td> 
-  <td>main@1888924788</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>24/05/13 22:07:47</td>   <td>-3946</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validating_Crud.beforeClass()[pri:0, instance:com.salesforce.crud.Validating_Crud@505fc5a4]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1888924788</td>   <td></td> </tr>
-<tr bgcolor="c1b5b6">  <td>24/05/13 22:07:46</td>   <td>-4126</td> <td title="&gt;&gt;BaseTest.beforeSuite()[pri:0, instance:com.salesforce.crud.Validating_Crud@505fc5a4]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1888924788</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>24/05/13 22:07:51</td>   <td>312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.invalidGetAccountAPI()[pri:2, instance:com.salesforce.crud.Validating_Crud@505fc5a4]">invalidGetAccountAPI</td> 
-  <td>main@1888924788</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>24/05/13 22:07:52</td>   <td>1720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validateDeletedNonExistAccount()[pri:5, instance:com.salesforce.crud.Validating_Crud@505fc5a4]">validateDeletedNonExistAccount</td> 
-  <td>main@1888924788</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>24/05/13 22:07:50</td>   <td>-445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validateGetAccountAPI()[pri:1, instance:com.salesforce.crud.Validating_Crud@505fc5a4]">validateGetAccountAPI</td> 
-  <td>main@1888924788</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>24/05/13 22:07:52</td>   <td>1387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validatePatchedData()[pri:0, instance:com.salesforce.crud.Validating_Crud@505fc5a4]">validatePatchedData</td> 
-  <td>main@1888924788</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>24/05/13 22:07:51</td>   <td>922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validatePatchedStatus()[pri:3, instance:com.salesforce.crud.Validating_Crud@505fc5a4]">validatePatchedStatus</td> 
-  <td>main@1888924788</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>24/05/13 22:07:48</td>   <td>-2910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validatelogin()[pri:0, instance:com.salesforce.crud.Validating_Crud@505fc5a4]">validatelogin</td> 
-  <td>main@1888924788</td>   <td></td> </tr>
+<tr bgcolor="95dea7">  <td>24/05/15 15:15:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validating_Crud.beforeClass()[pri:0, instance:com.salesforce.crud.Validating_Crud@16a0ee18]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@349259569</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>24/05/15 15:15:10</td>   <td>-208</td> <td title="&gt;&gt;BaseTest.beforeSuite()[pri:0, instance:com.salesforce.crud.Validating_Crud@16a0ee18]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@349259569</td>   <td></td> </tr>
+<tr bgcolor="95dea7">  <td>24/05/15 15:15:13</td>   <td>3007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validating_Crud.validateGetAccountAPI()[pri:1, instance:com.salesforce.crud.Validating_Crud@16a0ee18]">validateGetAccountAPI</td> 
+  <td>main@349259569</td>   <td></td> </tr>
 </table>
