--- a/test-output/old/Regression Suite/classes.html
+++ b/test-output/old/Regression Suite/classes.html
@@ -30,7 +30,7 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.salesforce.crud.Validating_Crud</td>
+<td>com.salesforce.crudTest.Validating_Crud</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
